content: fix overflow code breaking container
Fixes b/137689499
Fixes b/131907925

Reviewed-on: https://team-review.git.corp.google.com/c/golang/discovery/+/510440

--- a/content/static/css/stylesheet.css
+++ b/content/static/css/stylesheet.css
@@ -326,6 +326,9 @@ code {
 .ReadMe img {
   max-width: 100%;
 }
+.ReadMe pre {
+  overflow-x: auto;
+}
 
 .ModulesNav {
   margin: 0 -16px 16px -16px;
